force-app/main/default/objects/Work_Schedule_Override__c/Work_Schedule_Override__c.object-meta.xml
<CustomObject>
    <label>Work Schedule Override</label>
    <nameField>
        <displayFormat>WSO-{0000}</displayFormat>
        <label>Work Schedule Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Schedule Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>