force-app/main/default/objects/Work_Schedule_Override__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Absence_Compensation</valueSetName>
    </valueSet>
</CustomField>