force-app/main/default/objects/Work_Schedule_Override__c/listViews/Absence_for_my_Employees.listView-meta.xml
<ListView>
    <fullName>Absence_for_my_Employees</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Employees&apos; Absence</label>
</ListView>