force-app/main/default/objects/Work_Schedule_Override__c/listViews/Absence_This_Year.listView-meta.xml
<ListView>
    <fullName>Absence_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Employee__c</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>All Absence This Year</label>
    <sharedTo>
        <group>Human_Resources</group>
    </sharedTo>
</ListView>