force-app/main/default/objects/Work_Schedule_Override__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Employee__c</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Absence</label>
    <sharedTo>
        <group>Human_Resources</group>
    </sharedTo>
</ListView>