force-app/main/default/objects/Work_Schedule_Override__c/listViews/My_Employees_Past_Absence.listView-meta.xml
<ListView>
    <fullName>My_Employees_Past_Absence</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Employee__c</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>My Employees&apos; Past Absence</label>
</ListView>